[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/BLKCHCRY.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Stations/station_spiral_in_use.png" type="Texture" id=2]
[ext_resource path="res://Assets/Ingredients/ingredient_ectoplasm.png" type="Texture" id=3]
[ext_resource path="res://Assets/Ingredients/potion_bile.png" type="Texture" id=4]
[ext_resource path="res://Assets/Stations/station_book.png" type="Texture" id=5]
[ext_resource path="res://Book/SpiralPage.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="SpiralPage" type="Node2D"]
position = Vector2( 662.718, 0 )
script = ExtResource( 6 )

[node name="TitleSprite" type="Sprite" parent="."]
position = Vector2( 593.282, 80 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
centered = false

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 139.0
margin_top = 76.0
margin_right = 603.0
margin_bottom = 272.0
rect_pivot_offset = Vector2( 120.95, 48.9917 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Ecto Plasma"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line1" type="RichTextLabel" parent="."]
margin_left = 145.0
margin_top = 204.0
margin_right = 602.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 120.95, 48.9917 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2" type="RichTextLabel" parent="."]
margin_left = 145.0
margin_top = 327.677
margin_right = 602.0
margin_bottom = 427.677
rect_pivot_offset = Vector2( 120.95, 48.9917 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Haven Ghoul Ectoplasm"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line3" type="RichTextLabel" parent="."]
margin_left = 145.282
margin_top = 498.156
margin_right = 602.282
margin_bottom = 598.156
rect_pivot_offset = Vector2( 120.95, 48.9917 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Condensed in Spiralmouth until ready"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line4" type="RichTextLabel" parent="."]
margin_left = 145.0
margin_top = 548.87
margin_right = 602.0
margin_bottom = 648.87
rect_pivot_offset = Vector2( 120.95, 48.9917 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line1Sprite" type="Sprite" parent="."]
position = Vector2( 600.536, 190.53 )
scale = Vector2( 8, 8 )
centered = false

[node name="Line2Sprite" type="Sprite" parent="."]
position = Vector2( 585.282, 288 )
scale = Vector2( 8, 8 )
texture = ExtResource( 3 )
centered = false

[node name="Line3Sprite" type="Sprite" parent="."]
position = Vector2( 600.818, 480 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="Line4Sprite" type="Sprite" parent="."]
position = Vector2( 600.536, 543.308 )
scale = Vector2( 8, 8 )
centered = false

[node name="BookSprite" type="Sprite" parent="."]
position = Vector2( 342, 320 )
scale = Vector2( 25.5101, 17.2174 )
z_index = -1
texture = ExtResource( 5 )
centered = false
offset = Vector2( -15.2923, -25.4637 )
